Further progress toward getting the landing page to work.

--- a/src/gwt/public/landing.html
+++ b/src/gwt/public/landing.html
@@ -5,6 +5,10 @@
   <link rel="stylesheet" href="/css/global.css" type="text/css"/>
   <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
   <link rel="stylesheet" href="/css/page.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/item.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/account.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/games.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/whirleds.css" type="text/css"/>
   <link rel="stylesheet" href="/css/landing.css" type="text/css"/>
 </head>
 
