More split client progress.

--- a/src/gwt/public/frame.html
+++ b/src/gwt/public/frame.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div id="loadingAndTests" class="loading">
+  <div id="loading" class="loading">
       <h2>Whirled is loading...</h2>
       <noscript><blockquote>
           Whirled requires JavaScript to operate. Please turn it on in your browser.
@@ -22,12 +22,8 @@
       </blockquote></noscript>
   </div>
 
-  <table id="ctable" width="100%" height="100%" cellpadding="0" cellspacing="0"
-         style="padding: 0; margin: 0;">
-  <tr><td colspan="3" id="header"></td></tr>
-  <tr><td valign="top" id="content" style="background: #FFFFFF; display: none"></td>
-      <td valign="top" id="client" height="100%"></td></tr>
-  </table>
+  <div id="page"></div>
+
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
   <script language="javascript" src="frame.nocache.js"></script>
   <script id="swfobject" type="text/javascript"></script>
