--- a/src/gwt/public/help.html
+++ b/src/gwt/public/help.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="/css/help.css" type="text/css"/>
 </head>
 
-<body>
-  <div id="content" style="background: #FFFFFF; height: 100%"></div>
+<body style="background: #FFFFFF">
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
   <script language="javascript" src="help.nocache.js"></script>
 </body>
