--- a/src/gwt/public/landing.html
+++ b/src/gwt/public/landing.html
@@ -12,8 +12,7 @@
   <link rel="stylesheet" href="/css/landing.css" type="text/css"/>
 </head>
 
-<body>
-  <div id="content" style="background: #FFFFFF; height: 100%"></div>
+<body style="background: #FFFFFF">
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
   <script language="javascript" src="landing.nocache.js"></script>
 </body>
