--- a/src/gwt/public/whirleds.html
+++ b/src/gwt/public/whirleds.html
@@ -5,11 +5,12 @@
   <link rel="stylesheet" href="/css/global.css" type="text/css"/>
   <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
   <link rel="stylesheet" href="/css/page.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/item.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/msgs.css" type="text/css"/>
   <link rel="stylesheet" href="/css/whirleds.css" type="text/css"/>
 </head>
 
-<body>
-  <div id="content" style="background: #FFFFFF; height: 100%"></div>
+<body style="background: #FFFFFF">
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
   <script language="javascript" src="whirleds.nocache.js"></script>
 </body>
