--- a/src/gwt/public/stuff.html
+++ b/src/gwt/public/stuff.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>World</title>
+  <title>My Stuff</title>
   <link rel="stylesheet" href="/css/global.css" type="text/css"/>
   <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
   <link rel="stylesheet" href="/css/page.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/item.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/editem.css" type="text/css"/>
   <link rel="stylesheet" href="/css/stuff.css" type="text/css"/>
 </head>
 
