Instead of making our invite URL hideously long and scaring our users, let's be clever and use the information that we already have to create a tracking cookie for a user that was invited by another user. GWT side forthcoming with other invitation related bits.

--- a/rsrc/email/memberInvite/message.html
+++ b/rsrc/email/memberInvite/message.html
@@ -48,7 +48,7 @@ online world of games, chat and adventure. </p>
 <div align="center">
 <table background="${server_url}/images/invite/enter_whirled.jpg" width="567" height="94">
 <tr><td style="padding-top: 20px; padding-left: 35px">
-<font color="#3b86b0"><b><a href="${server_url}/#me-i_${invite_id}_${referral_params}">${server_url}/#me-i_${invite_id}_${referral_params}</a></b></font>
+<font color="#3b86b0"><b><a href="${server_url}/#me-i_${invite_id}">${server_url}/#me-i_${invite_id}</a></b></font>
 </td></tr>
 </table>
 
@@ -60,7 +60,7 @@ online world of games, chat and adventure. </p>
 <p style="color: #4B718A"> If you would prefer not to receive invitations to Whirled from your friends,
 please visit this link:</p>
 
-<p><a style="color: #4B718A" href="${server_url}/#account-optout_${invite_id}_${referral_params}">${server_url}/#account-optout_${invite_id}_${referral_params}</a></p>
+<p><a style="color: #4B718A" href="${server_url}/#account-optout_${invite_id}">${server_url}/#account-optout_${invite_id}</a></p>
 #else
 <p style="color: #4B718A">This invitation is a result of this email address having been submitted at
 http://www.threerings.net/whirled/ for inclusion in Whirled testing. If you've
