--- a/src/gwt/public/account.html
+++ b/src/gwt/public/account.html
@@ -11,5 +11,6 @@
 <body style="background: #FFFFFF">
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
   <script language="javascript" src="account.nocache.js"></script>
+  <script id="recaptcha" type="text/javascript"></script>
 </body>
 </html>
