--- a/src/gwt/public/frame/index.html
+++ b/src/gwt/public/frame/index.html
@@ -5,13 +5,22 @@
   <meta content="Play games, make friends, explore, chat, shop and create all in your own Whirled."
         name="description"/>
   <meta content="games,friends,explore,chat,shop,create,whirled" name="keywords"/>
-
-  <link rel="stylesheet" href="/css/global.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/frame.css" type="text/css"/>
   <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon"/>
+  <style>
+  .loading {
+    text-align: center;
+  }
+  .loading h2 {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    padding: 25px 0 10px 0;
+    font-size: 18px;
+    color: #FFFFFF;
+    width: 190px;
+    margin: auto;
+    text-align: left;
+  }
+  </style>
 </head>
-
 <body>
   <div id="loading" class="loading">
       <h2>Whirled is loading...</h2>
@@ -21,9 +30,7 @@
           <a href="http://wiki.whirled.com/How_To_Enable_JavaScript">how to turn on JavaScript</a>.
       </blockquote></noscript>
   </div>
-
   <div id="page"></div>
-
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
   <script language="javascript" src="frame.nocache.js"></script>
   <script id="swfobject" type="text/javascript"></script>
