--- a/src/gwt/public/stuff/index.html
+++ b/src/gwt/public/stuff/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <title>My Stuff</title>
-  <link rel="stylesheet" href="/css/global.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/page.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/item.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/editem.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/stuff.css" type="text/css"/>
-</head>
-
+<head><title>My Stuff</title></head>
 <body style="background: #FFFFFF">
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
   <script language="javascript" src="stuff.nocache.js"></script>
