Fixed cookie method names

--- a/pages/code/GameControl-index.html
+++ b/pages/code/GameControl-index.html
@@ -86,8 +86,8 @@
      <ul class="events">
      <li> <a href="asdocs/com/whirled/game/PlayerSubControl.html#event:CoinsAwarded" onclick="highlight('event:CoinsAwarded')">CoinsAwardedEvent.COINS_AWARDED</a>
      </ul><ul class="methods">
-     <li> <a href="asdocs/com/whirled/game/PlayerSubControl.html#getUserCookie()" onclick="highlight('getUserCookie()')">getUserCookie()</a>
-     <li> <a href="asdocs/com/whirled/game/PlayerSubControl.html#setUserCookie()" onclick="highlight('setUserCookie()')">setUserCookie()</a>
+     <li> <a href="asdocs/com/whirled/game/PlayerSubControl.html#getCookie()" onclick="highlight('getUserCookie()')">getUserCookie()</a>
+     <li> <a href="asdocs/com/whirled/game/PlayerSubControl.html#setCookie()" onclick="highlight('setUserCookie()')">setUserCookie()</a>
      <li> <a href="asdocs/com/whirled/game/PlayerSubControl.html#awardPrize()" onclick="highlight('awardPrize()')">awardPrize()</a>
      <li> <a href="asdocs/com/whirled/game/PlayerSubControl.html#awardTrophy()" onclick="highlight('awardTrophy()')">awardTrophy()</a>
      <li> <a href="asdocs/com/whirled/game/PlayerSubControl.html#getPlayerItemPacks()" onclick="highlight('getPlayerItemPacks()')">getPlayerItemPacks()</a>
